--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
               Farhad Sadykov
             </h1>
             <p class="homepage-subtitle">
-              I try to find personal meaning in everyday life through pictures I take.
+              I try to find personal meaning in everyday life through pictures I take.<br>
               Please have fun.
             </p>
             <a href="#" class="homepage-btn">
