finished header and nav

--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
               I try to find personal meaning in everyday life through pictures I take.<br>
               Please have fun.
             </p>
-            <a href="#" class="homepage-btn">
+            <a href="selected-works.html" class="homepage-btn">
               Enter
             </a>
           </div>
