finished cover for selected works section, started selected works gallery, installed fslightbox plugin, edited readme file

--- a/www/selected-works.html
+++ b/www/selected-works.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Selected works - Farhad Sadykov</title>
 
-  <!-- <link rel="icon" type="image/png" href="#"> -->
+  <link rel="icon" type="image/png" href="../images/favicon.png">
   <link rel="stylesheet" href="style/style.css">
 </head>
 
@@ -56,13 +56,36 @@
   </header>
 
   <main class="main">
-
+    <section class="selected-works">
+        <div class="selected-works-cover">
+        </div>
+        <div class="selected-works-container">
+          <h2 class="selected-works-title">
+            Selected works
+          </h2>
+          <div class="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-1.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-1.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-2.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-2.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-3.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-3.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-4.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-4.jpg" class="selected-works-img">
+            </a>
+          </div>
+        </div>
+    </section>
   </main>
 
   <footer class="footer">
 
   </footer>
 
+  <script src="scripts/fslightbox.js"></script>
   <script src="scripts/script.js"></script>
 </body>
 </html>
