finished selected works gallery

--- a/www/selected-works.html
+++ b/www/selected-works.html
@@ -76,6 +76,84 @@
             <a href="../images/selected-works/sw-img-4.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
               <img src="../images/selected-works/sw-img-4.jpg" class="selected-works-img">
             </a>
+            <a href="../images/selected-works/sw-img-5.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-5.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-6.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-6.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-7.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-7.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-8.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-8.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-9.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-9.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-10.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-10.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-11.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-11.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-12.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-12.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-13.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-13.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-14.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-14.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-15.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-15.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-16.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-16.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-17.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-17.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-18.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-18.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-19.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-19.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-20.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-20.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-21.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-21.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-22.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-22.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-23.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-23.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-24.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-24.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-25.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-25.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-26.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-26.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-27.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-27.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-28.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-28.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-29.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-29.jpg" class="selected-works-img">
+            </a>
+            <a href="../images/selected-works/sw-img-30.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+              <img src="../images/selected-works/sw-img-30.jpg" class="selected-works-img">
+            </a>
           </div>
         </div>
     </section>
