--- a/www/selected-works.html
+++ b/www/selected-works.html
@@ -160,7 +160,26 @@
   </main>
 
   <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-wrap">
+        <p class="footer-copyright">© 2024 Farhad Sadykov</p>
+        <ul class="social">
+          <li class="social-item">
+           <a href="https://t.me/farhad" style="background-image: url('../images/telegram-icon.png');" target="_blank" class="social-link">
+           </a>
+         </li>
+         <li class="social-item">
+           <a href="https://vk.com/fsadykov" style="background-image: url('../images/vk-icon.png');" target="_blank" class="social-link">
+           </a>
+          </li>
+         <li class="social-item">
+           <a href="https://x.com/_everwave" style="background-image: url('../images/x-icon.png');" target="_blank" class="social-link">
+           </a>
+          </li>
+        </ul>
+      </div>
 
+    </div>
   </footer>
 
   <script src="scripts/fslightbox.js"></script>
