--- a/www/selected-works.html
+++ b/www/selected-works.html
@@ -46,7 +46,9 @@
               </a>
             </li>
             <li>
-              <a href="#">About</a>
+              <a href="about.html">
+                About
+              </a>
             </li>
           </ul>
         </nav>
@@ -178,7 +180,6 @@
           </li>
         </ul>
       </div>
-
     </div>
   </footer>
 
