finished exhibition and press pages

--- a/www/selected-works.html
+++ b/www/selected-works.html
@@ -31,12 +31,12 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="exhibitions.html">
                 Exhibitions
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="press.html">
                 Press
               </a>
             </li>
@@ -167,15 +167,15 @@
         <p class="footer-copyright">© 2024 Farhad Sadykov</p>
         <ul class="social">
           <li class="social-item">
-           <a href="https://t.me/farhad" style="background-image: url('../images/telegram-icon.png');" target="_blank" class="social-link">
+           <a href="https://t.me/farhad" style="background-image: url('../images/telegram-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
            </a>
          </li>
          <li class="social-item">
-           <a href="https://vk.com/fsadykov" style="background-image: url('../images/vk-icon.png');" target="_blank" class="social-link">
+           <a href="https://vk.com/fsadykov" style="background-image: url('../images/vk-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
            </a>
           </li>
          <li class="social-item">
-           <a href="https://x.com/_everwave" style="background-image: url('../images/x-icon.png');" target="_blank" class="social-link">
+           <a href="https://x.com/_everwave" style="background-image: url('../images/x-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
            </a>
           </li>
         </ul>
