--- a/www/about.html
+++ b/www/about.html
@@ -95,30 +95,28 @@
               <p class="about-text">
                 <ul class="about-list">
                   <li class="about-item">
-                    <a href="https://moderncolor.ru/" target="_blank" class="about-link">Modern Color</a>
+                    <a href="https://moderncolor.ru/" target="_blank" rel="noopener noreferrer" class="about-link">Modern Color</a>
                     — photography podcast.
                   </li>
                   <li class="about-item">
-                    <a href="https://homeofsnooker.ru/" target="_blank" class="about-link">Home of Snooker</a>
+                    <a href="https://homeofsnooker.ru/" target="_blank" rel="noopener noreferrer" class="about-link">Home of Snooker</a>
                     — one of the biggest snooker media.
                   </li>
                 </ul>
               </p>
               <p class="about-text">
                 All his NFTs you can find
-                <a href="https://opensea.io/accounts/everwave" target="_blank" class="about-link">here.</a>
+                <a href="https://opensea.io/accounts/everwave" target="_blank" rel="noopener noreferrer" class="about-link">here.</a>
               </p>
               <p class="about-text">
                 Email //
-                <a href="mailto:purestate@yandex.ru" class="about-link">purestate@yandex.ru</a>
+                <a href="mailto:purestate@yandex.ru" target="_blank" rel="noopener noreferrer" class="about-link">purestate@yandex.ru</a>
               </p>
             </div>
             <div class="about-avatar">
               <img src="images/fs-avatar.png" class="about-pic">
             </div>
           </div>
-
-
         </div>
     </section>
   </main>
@@ -129,15 +127,15 @@
         <p class="footer-copyright">© 2024 Farhad Sadykov</p>
         <ul class="social">
           <li class="social-item">
-           <a href="https://t.me/farhad" style="background-image: url('../images/telegram-icon.png');" target="_blank" class="social-link">
+           <a href="https://t.me/farhad" style="background-image: url('../images/telegram-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
            </a>
          </li>
          <li class="social-item">
-           <a href="https://vk.com/fsadykov" style="background-image: url('../images/vk-icon.png');" target="_blank" class="social-link">
+           <a href="https://vk.com/fsadykov" style="background-image: url('../images/vk-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
            </a>
           </li>
          <li class="social-item">
-           <a href="https://x.com/_everwave" style="background-image: url('../images/x-icon.png');" target="_blank" class="social-link">
+           <a href="https://x.com/_everwave" style="background-image: url('../images/x-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
            </a>
           </li>
         </ul>
