--- a/www/metamorphoses.html
+++ b/www/metamorphoses.html
@@ -66,7 +66,7 @@
             Metamorphoses
           </h2>
           <p class="metamorphoses-desc">
-            The photo story about the actors transformation for a show in a nightclub.
+            A photo story about the actors transformation for a show in a nightclub.
             St. Petersburg. March 7, 2016.
           </p>
           <div class="metamorphoses-gallery">
