finished city glow page

--- a/www/metamorphoses.html
+++ b/www/metamorphoses.html
@@ -67,7 +67,7 @@
           </h2>
           <p class="metamorphoses-desc">
             A photo story about the actors transformation for a show in a nightclub.
-            St. Petersburg. March 7, 2016.
+            March 7, 2016.
           </p>
           <div class="metamorphoses-gallery">
             <a href="../images/metamorphoses/meta-img-1.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
