finished dropdown menu for projects link, animation for dropdown menu,installed aos plugin

--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
             </h1>
             <p class="homepage-subtitle">
               I try to find personal meaning in everyday life through pictures I take.<br>
-              Please have fun.
+               So don't take it seriously. Just have fun.
             </p>
             <a href="selected-works.html" class="homepage-btn">
               Enter
