--- a/www/selected-works.html
+++ b/www/selected-works.html
@@ -19,34 +19,66 @@
           Farhad Sadykov
         </a>
         <nav class="nav">
-          <ul>
-            <li>
-              <a href="selected-works.html">
+          <ul class="nav-menu">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="selected-works.html">
                 Selected works
               </a>
             </li>
-            <li>
-              <a href="#">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="city-glow.html">
                 Projects
               </a>
+              <ul class="nav-submenu">
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="city-glow.html">
+                    City glow
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="lost-in-turkey.html">
+                    Lost in Türkiye
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="better-days.html">
+                    Better days
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="inner-landscapes.html">
+                    Inner landscapes
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="grace.html">
+                    Grace
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="metamorphoses.html">
+                    Metamorphoses
+                  </a>
+                </li>
+              </ul>
             </li>
-            <li>
-              <a href="exhibitions.html">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="exhibitions.html">
                 Exhibitions
               </a>
             </li>
-            <li>
-              <a href="press.html">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="press.html">
                 Press
               </a>
             </li>
-            <li>
-              <a href="https://moderncolor.ru/category/podcast/" target="_blank" rel="noopener noreferrer">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="https://moderncolor.ru/category/podcast/" target="_blank" rel="noopener noreferrer">
                 Podcast
               </a>
             </li>
-            <li>
-              <a href="about.html">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="about.html">
                 About
               </a>
             </li>
@@ -164,7 +196,7 @@
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-wrap">
-        <p class="footer-copyright">© 2024 Farhad Sadykov</p>
+        <p class="footer-copyright">Images, text, web design and development © Farhad Sadykov</p>
         <ul class="social">
           <li class="social-item">
            <a href="https://t.me/farhad" style="background-image: url('../images/telegram-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
