animation for homepage, selected works, metamorphoses, press

--- a/www/metamorphoses.html
+++ b/www/metamorphoses.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Selected works - Farhad Sadykov</title>
+  <title>Metamorphoses - Farhad Sadykov</title>
 
   <link rel="icon" type="image/png" href="../images/favicon.png">
   <link rel="stylesheet" href="style/style.css">
@@ -19,34 +19,66 @@
           Farhad Sadykov
         </a>
         <nav class="nav">
-          <ul>
-            <li>
-              <a href="selected-works.html">
+          <ul class="nav-menu">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="selected-works.html">
                 Selected works
               </a>
             </li>
-            <li>
-              <a href="#">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="city-glow.html">
                 Projects
               </a>
+              <ul class="nav-submenu">
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="city-glow.html">
+                    City glow
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="lost-in-turkey.html">
+                    Lost in Türkiye
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="better-days.html">
+                    Better days
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="inner-landscapes.html">
+                    Inner landscapes
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="grace.html">
+                    Grace
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="metamorphoses.html">
+                    Metamorphoses
+                  </a>
+                </li>
+              </ul>
             </li>
-            <li>
-              <a href="exhibitions.html">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="exhibitions.html">
                 Exhibitions
               </a>
             </li>
-            <li>
-              <a href="press.html">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="press.html">
                 Press
               </a>
             </li>
-            <li>
-              <a href="https://moderncolor.ru/" target="_blank" rel="noopener noreferrer">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="https://moderncolor.ru/category/podcast/" target="_blank" rel="noopener noreferrer">
                 Podcast
               </a>
             </li>
-            <li>
-              <a href="about.html">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="about.html">
                 About
               </a>
             </li>
@@ -62,66 +94,66 @@
         <div class="metamorphoses-cover">
         </div>
         <div class="metamorphoses-container">
-          <h2 class="metamorphoses-title">
+          <h2 class="metamorphoses-title" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
             Metamorphoses
           </h2>
-          <p class="metamorphoses-desc">
+          <p class="metamorphoses-desc" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
             A photo story about the actors transformation for a show in a nightclub.
             March 7, 2016.
           </p>
           <div class="metamorphoses-gallery">
-            <a href="../images/metamorphoses/meta-img-1.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-1.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-1.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-2.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-2.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-2.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-3.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-3.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-3.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-4.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-4.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-4.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-5.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-5.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-5.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-6.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-6.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-6.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-7.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-7.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-7.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-8.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-8.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-8.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-9.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-9.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-9.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-10.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-10.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-10.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-11.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-11.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-11.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-12.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-12.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-12.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-13.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-13.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-13.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-14.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-14.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-14.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-15.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-15.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-15.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-16.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-16.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-16.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-17.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-17.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-17.jpg" class="metamorphoses-img">
             </a>
-            <a href="../images/metamorphoses/meta-img-18.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/metamorphoses/meta-img-18.jpg" class="metamorphoses-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/metamorphoses/meta-img-18.jpg" class="metamorphoses-img">
             </a>
           </div>
@@ -132,7 +164,9 @@
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-wrap">
-        <p class="footer-copyright">© 2024 Farhad Sadykov</p>
+        <p class="footer-copyright">
+          Images, text, web design and development © Farhad Sadykov
+        </p>
         <ul class="social">
           <li class="social-item">
            <a href="https://t.me/farhad" style="background-image: url('../images/telegram-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
@@ -151,6 +185,7 @@
     </div>
   </footer>
 
+  <script src="scripts/aos.js"></script>
   <script src="scripts/fslightbox.js"></script>
   <script src="scripts/script.js"></script>
 </body>
