--- a/www/press.html
+++ b/www/press.html
@@ -19,34 +19,66 @@
           Farhad Sadykov
         </a>
         <nav class="nav">
-          <ul>
-            <li>
-              <a href="selected-works.html">
+          <ul class="nav-menu">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="selected-works.html">
                 Selected works
               </a>
             </li>
-            <li>
-              <a href="#">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="city-glow.html">
                 Projects
               </a>
+              <ul class="nav-submenu">
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="city-glow.html">
+                    City glow
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="lost-in-turkey.html">
+                    Lost in Türkiye
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="better-days.html">
+                    Better days
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="inner-landscapes.html">
+                    Inner landscapes
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="grace.html">
+                    Grace
+                  </a>
+                </li>
+                <li class="nav-submenu-item">
+                  <a class="nav-submenu-link" href="metamorphoses.html">
+                    Metamorphoses
+                  </a>
+                </li>
+              </ul>
             </li>
-            <li>
-              <a href="#">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="exhibitions.html">
                 Exhibitions
               </a>
             </li>
-            <li>
-              <a href="#">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="press.html">
                 Press
               </a>
             </li>
-            <li>
-              <a href="https://moderncolor.ru/" target="_blank" rel="noopener noreferrer">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="https://moderncolor.ru/category/podcast/" target="_blank" rel="noopener noreferrer">
                 Podcast
               </a>
             </li>
-            <li>
-              <a href="about.html">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="about.html">
                 About
               </a>
             </li>
@@ -62,23 +94,26 @@
       <div class="press-cover">
       </div>
       <div class="press-container">
-        <h2 class="press-title">
+        <h2 class="press-title" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
           Press
         </h2>
-        <p class="press-text">
-          Interview for Progresso Fotografico Magazine. Milan, Italy // May 2020
-          (<a href="images/progresso-fotografico-tearsheats.pdf" target="_blank" rel="noopener noreferrer"class="press-link">Tearsheets</a>)
-        </p>
-        <p class="press-text">
-          Not An Accidental Witness vol. 2, 2018 (Print feature, Special prize)
-        </p>
-        <p class="press-text">
-          Not An Accidental Witness vol. 1, 2017 (Print feature)
-        </p>
-        <p class="press-text">
-          <a href="images/le-monde-diplomatique-2016.pdf" target="_blank" rel="noopener noreferrer"class="press-link">Le Monde Diplomatique Norway 2016</a>
-          (Print feature)
-        </p>
+        <div data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
+          <p class="press-text" >
+            Interview for Progresso Fotografico Magazine. Milan, Italy // May 2020
+            (<a href="images/progresso-fotografico-tearsheats.pdf" target="_blank" rel="noopener noreferrer"class="press-link">Tearsheets</a>)
+          </p>
+          <p class="press-text">
+            Not An Accidental Witness vol. 2, 2018 (Print feature, Special prize)
+          </p>
+          <p class="press-text">
+            Not An Accidental Witness vol. 1, 2017 (Print feature)
+          </p>
+          <p class="press-text">
+            <a href="images/le-monde-diplomatique-2016.pdf" target="_blank" rel="noopener noreferrer"class="press-link">Le Monde Diplomatique Norway 2016</a>
+            (Print feature)
+          </p>
+        </div>
+
       </div>
     </section>
   </main>
@@ -86,7 +121,9 @@
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-wrap">
-        <p class="footer-copyright">© 2024 Farhad Sadykov</p>
+        <p class="footer-copyright">
+          Images, text, web design and development © Farhad Sadykov
+        </p>
         <ul class="social">
           <li class="social-item">
            <a href="https://t.me/farhad" style="background-image: url('../images/telegram-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
@@ -105,6 +142,7 @@
     </div>
   </footer>
 
+  <script src="scripts/aos.js"></script>
   <script src="scripts/fslightbox.js"></script>
   <script src="scripts/script.js"></script>
 </body>
