--- a/www/index.html
+++ b/www/index.html
@@ -13,10 +13,10 @@
 
 <body>
   <main class="main">
-    <section class="homepage">
+    <section class="homepage" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-in-out-quad">
       <div class="homepage-fade">
         <div class="homepage-container">
-          <div class="homepage-wrap">
+          <div class="homepage-wrap" data-aos="fade-in" data-aos-delay="1000" data-aos-duration="1500" data-aos-easing="ease-in-out-quad">
             <h1 class="homepage-title">
               Farhad Sadykov
             </h1>
@@ -33,6 +33,8 @@
     </section>
   </main>
 
+  <script src="scripts/aos.js"></script>
+  <script src="scripts/fslightbox.js"></script>
   <script src="scripts/script.js"></script>
 </body>
 </html>
