--- a/www/selected-works.html
+++ b/www/selected-works.html
@@ -15,10 +15,10 @@
   <header class="header">
     <div class="header-container">
       <div class="header-wrap">
-        <a href="selected-works.html" class="header-logo">
+        <a href="selected-works.html" class="header-logo" data-aos="fade-in" data-aos-duration="700" data-aos-easing="ease-out-quad">
           Farhad Sadykov
         </a>
-        <nav class="nav">
+        <nav class="nav" data-aos="fade-in" data-aos-duration="700" data-aos-easing="ease-out-quad">
           <ul class="nav-menu">
             <li class="nav-menu-item">
               <a class="nav-menu-link" href="selected-works.html">
@@ -94,98 +94,98 @@
         <div class="selected-works-cover">
         </div>
         <div class="selected-works-container">
-          <h2 class="selected-works-title">
+          <h2 class="selected-works-title" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
             Selected works
           </h2>
           <div class="selected-works-gallery">
-            <a href="../images/selected-works/sw-img-1.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-1.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-1.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-2.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-2.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-2.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-3.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-3.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-3.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-4.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-4.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-4.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-5.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-5.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-5.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-6.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-6.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-6.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-7.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-7.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-7.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-8.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-8.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-8.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-9.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-9.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-9.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-10.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-10.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-10.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-11.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-11.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-11.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-12.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-12.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-12.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-13.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-13.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-13.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-14.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-14.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-14.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-15.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-15.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-15.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-16.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-16.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-16.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-17.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-17.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-17.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-18.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-18.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-18.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-19.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-19.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-19.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-20.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-20.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-20.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-21.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-21.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-21.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-22.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-22.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-22.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-23.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-23.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-23.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-24.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-24.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-24.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-25.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-25.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-25.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-26.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-26.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-26.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-27.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-27.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-27.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-28.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-28.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-28.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-29.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-29.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-29.jpg" class="selected-works-img">
             </a>
-            <a href="../images/selected-works/sw-img-30.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/selected-works/sw-img-30.jpg" class="selected-works-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-out-quad">
               <img src="../images/selected-works/sw-img-30.jpg" class="selected-works-img">
             </a>
           </div>
@@ -196,7 +196,9 @@
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-wrap">
-        <p class="footer-copyright">Images, text, web design and development © Farhad Sadykov</p>
+        <p class="footer-copyright">
+          Images, text, web design and development © Farhad Sadykov
+        </p>
         <ul class="social">
           <li class="social-item">
            <a href="https://t.me/farhad" style="background-image: url('../images/telegram-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
@@ -215,6 +217,7 @@
     </div>
   </footer>
 
+  <script src="scripts/aos.js"></script>
   <script src="scripts/fslightbox.js"></script>
   <script src="scripts/script.js"></script>
 </body>
